Fix white gap at bottom of screenshot

--- a/css/home.css
+++ b/css/home.css
@@ -39,7 +39,7 @@ body {
 }
 .column.previews .preview.iphone_x img.screenshot {
     height: 470px;
-    top: -491px;
+    top: -490px;
 }
 .column.previews .preview.pixel img.screenshot {
     width: 216px;
